# hai

./: .gitignore  .mise.toml  .prettierignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  eslint.config.js  index.html  original_spec.md  package-lock.json  package.json  playwright.config.ts  renovate.json  tsconfig.test.json  web-test-runner.config.mjs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  claude-instructions.md  copilot-instructions.md  copilot-review.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  device_request.yml  feature_request.yml
.github/workflows/: test.yml
crates/hai-core/: Cargo.toml
crates/hai-core/src/: devices.rs  disk_writer.rs  download.rs  error.rs  lib.rs  mock.rs  proxmox.rs  types.rs  utm.rs
docs/: project.md
docs/spec/: README.md  architecture.md  backend.md  ci-cd.md  contributing.md  testing.md  ui-design.md  user-flows.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: block_devices.rs  commands.rs  disk_writer.rs  download.rs  lib.rs  main.rs  mock.rs  proxmox.rs  types.rs  utm.rs
src/api/: commands.ts  index.ts  mock-data.ts  types.ts
src/components/: app-shell.ts  confirm-dialog.ts  device-card.ts  drive-card.ts  info-dialog.ts  option-card.ts  progress-bar.ts  step-indicator.ts  wizard-shell.ts
src/state/: wizard-state.ts
src/views/: other-options-view.ts  path-selection-view.ts  welcome-view.ts
test/e2e/: ha-hardware-flow.spec.ts  minipc-flow.spec.ts  navigation.spec.ts  other-options-flow.spec.ts  proxmox-flow.spec.ts  utm-flow.spec.ts
(+32 files in other folders)
